# consultancy-tycoon

./: .gitignore  .gutconfig.json  CLAUDE.md  Makefile  docker-compose.yml  export_presets.cfg  icon.svg.import  project.godot
.github/workflows/: test.yml
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial.sql
backend/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs
backend/systemd/: consultancy-tycoon-api.service
docs/plans/: 2026-02-11-game-design.md  2026-02-11-phase1-mvp.md  2026-02-12-graphics-scaling-design.md  2026-02-12-kenney-art-design.md  2026-02-12-kenney-art-plan.md  2026-02-12-management-rework-design.md  2026-02-12-management-rework-plan.md  2026-02-12-merge-rework-design.md  2026-02-12-merge-rework-plan.md  2026-02-12-office-view-design.md  2026-02-12-screen-scaling-plan.md  2026-02-13-tscn-migration-design.md  2026-02-13-tscn-migration-plan.md  2026-02-18-highscores-cloud-design.md  2026-02-18-highscores-cloud-implementation.md
infra/ansible/: deploy.yml
src/: main.gd  main.tscn
src/autoload/: cloud_manager.gd  event_bus.gd  game_state.gd
src/data/: ai_tool_data.gd  client_contract.gd  client_contract.gd.uid  coding_tab.gd  coding_task.gd  coding_task.gd.uid  conflict_chunk.gd  consultant_assignment.gd  consultant_data.gd  consultant_rental.gd  management_issue.gd  merge_conflict.gd  merge_conflict_factory.gd  random_event.gd  skill_data.gd  skill_data.gd.uid  task_factory.gd  task_factory.gd.uid
src/ide/: fake_code.gd  fake_code.gd.uid  ide_interface.gd  ide_interface.gd.uid  ide_interface.tscn
src/ui/: hud.gd  (+19 more)
(+61 files in other folders)
